--- a/src/components/pages/dashboard/Dashboard.css
+++ b/src/components/pages/dashboard/Dashboard.css
@@ -21,13 +21,13 @@
 
 .nav-list li a {
   text-decoration:solid;
-  color: #281303;
+  color: #b25712;
 font-weight: bold;}
 
 .main-content {
   padding: 10px;
 }
 .lst{
-  color: rgb(70, 4, 12);
+  color: rgb(208, 16, 39);
 }
 
